Fix/new components fixes (#32)
* fix(layout): Add custom scroll for input and for the Tabs.

* fix: Reformat code.

* fix(scroll): Small fix for scrollbar.

--- a/centreon-frontend/centreon-ui/src/ScrollBar/scroll-bar.scss
+++ b/centreon-frontend/centreon-ui/src/ScrollBar/scroll-bar.scss
@@ -32,5 +32,8 @@
       bottom: 10px;
       padding-left: 1px;
     }
+    &-big {
+      max-height: none;
+    }
   }
 }
